--- a/head.html
+++ b/head.html
@@ -1,5 +1,5 @@
 <head>
   <title>DappList</title>
-  <link rel="shortcut icon" href="/favicon.png?v=1" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico?v=1" type="image/x-icon">
 </head>
 
